--- a/CourseNotes/CleaningData/DraftNarrative.Rmd
+++ b/CourseNotes/CleaningData/DraftNarrative.Rmd
@@ -3,7 +3,7 @@ title: "Draft Narrative"
 output: html_document
 ---
 
-In this document, place draft narrative for this section of the notes. 
+
 
 
 ## Some places to scrape?
@@ -11,3 +11,16 @@ In this document, place draft narrative for this section of the notes.
 Storm damage database: http://rpubs.com/deflath/20484
 
 US Housing database: http://www.asdfree.com/2014/06/analyze-american-housing-survey-ahs.html
+
+## Cleaning Examples
+
+* NYC Restaurants
+
+    * Stripping blanks and quotes from the NYC Restaurants
+    * Looking for bogus values.
+    * Dates as POSIX
+    
+* NCI60
+
+    * Cell lines have "." in NCI60celllines and ":" in NCI60.
+    
